--- a/src/sass/simulator.sass
+++ b/src/sass/simulator.sass
@@ -50,22 +50,25 @@
   height: 200px
   label
     +stretch(auto, auto, 45px, 50px)
-  input
+  > input
     +stretch(auto, auto, 0, 0)
     width: 100%
     padding: 7px 12px
-  select
-    -webkit-appearance: none
-    +stretch(80px, auto, auto, 95px)
+  #increment
+    +stretch(80px, auto, auto, 80px)
     background: white
-    width: auto
+    width: 60px
 
-    padding: 10px
+    padding: 5px 10px
     border: 1px solid #aaa
-    text-align: center
     +border-radius(100px)
-    font-size: 19px
-    cursor: pointer
+    font-size: 18px
+    input
+      width: 40px
+      background: none
+      padding: 0
+      font-size: 18px
+      border: none
 
 // arithmetic logic unit _______________________________________________________
 #alu
