--- a/src/sass/simulator.sass
+++ b/src/sass/simulator.sass
@@ -50,10 +50,25 @@
   height: 200px
   label
     +stretch(auto, auto, 45px, 50px)
-  > input
+  #val
     +stretch(auto, auto, 0, 0)
     width: 100%
-    padding: 7px 12px
+    height: 41px
+    background: white
+    border: 1px solid #aaa
+    button
+      width: 30%
+      background: $greyClr
+      padding: 13px 0
+      border: none
+      cursor: pointer
+      &:hover
+        background: $greyBorderClr
+    input
+      width: 70%
+      background: none
+      border: none
+      padding: 7px 12px
   #increment
     +stretch(80px, auto, auto, 80px)
     background: white
