--- a/src/sass/settings.sass
+++ b/src/sass/settings.sass
@@ -13,3 +13,9 @@ $asideWidth: 400px
 $headerHeight: 60px
 $footerHeight: 45px
 $ramTitlesHeight: 40px
+
+// transitions _________________________________________________________________
+$default-transition-property : all
+$default-transition-duration : 200ms
+$default-transition-function : false
+$default-transition-delay    : false
