--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -41,7 +41,7 @@ a:hover
   text-decoration: underline
 
 main
-  +stretch($headerHeight, $asideWidth, $footerHeight)
+  +stretch($headerHeight, $asideWidth, $footerHeight + 15)
   overflow: visible
 
 // components __________________________________________________________________
