--- a/src/sass/memory.sass
+++ b/src/sass/memory.sass
@@ -3,8 +3,8 @@ aside
   position: fixed
   width: $asideWidth
   background-color: white
-  +box-shadow(1px 1px 10px 0 #aaa)
-  z-index: 300
+  +box-shadow(1px 5px 10px 0 #aaa)
+  z-index: 320
 
   section
     position: relative
@@ -15,7 +15,7 @@ aside
     &:first-child
       width: 60%
     #title
-      height: $ramTitlesHeight
+      height: $titlesHeight
       background-color: #eee
       padding: 12px 0
       text-align: center
@@ -23,7 +23,7 @@ aside
         family: 'Share Tech Mono', monospace
         size: 16px
     article
-      +stretch($ramTitlesHeight)
+      +stretch($titlesHeight)
       overflow-y: scroll
 
       .CodeMirror
