--- a/src/sass/settings.sass
+++ b/src/sass/settings.sass
@@ -11,8 +11,8 @@ $addressesBusClr: #555 #090    #06F    #C00
 // sizes _______________________________________________________________________
 $asideWidth: 410px
 $headerHeight: 60px
-$footerHeight: 45px
-$ramTitlesHeight: 40px
+$footerHeight: 230px
+$titlesHeight: 40px
 
 // transitions _________________________________________________________________
 $default-transition-property : all
