--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -6,8 +6,9 @@
       b Lorenzo Ganni
 
 footer
-  #log
+  #console
     #title(translate="LOG")
+    #log
   #stats
     #title(translate="STATS")
     table
