--- a/src/sass/footer.sass
+++ b/src/sass/footer.sass
@@ -40,6 +40,9 @@ footer
           color: nth($addressesBusClr, 2)
         &.step
           color: nth($addressesBusClr, 3)
+      hr
+        border: none
+        border-top: 1px dashed #aaa
 
   // statistics ________________________________________________________________
   #stats
