--- a/src/sass/header.sass
+++ b/src/sass/header.sass
@@ -26,7 +26,7 @@ header
     width: $asideWidth
     height: $headerHeight
     background: black
-    padding: 2px 50px 2px 10px
+    padding: 2px 50px 2px 15px
     color: white
     ul
       float: left
@@ -36,11 +36,15 @@ header
       li
         float: left
 
-        padding: 5px
+        padding: 5px 3px
         margin: 10px 0
 
         color: white
         cursor: pointer
+
+        .fa
+          font-size: 21px
+          margin-right: 5px
 
         &.active svg
           fill: $themeClr
@@ -63,6 +67,8 @@ header
       .disabled
         svg
           fill: #666
+        .fa
+          color: #666
 
     #delayContainer
       float: right
@@ -72,7 +78,7 @@ header
       font-size: 14px
 
     input[type="range"]
-      width: 150px
+      width: 130px
       margin: 19px 5px 20px 10px
   nav
     float: right
