Default values and layout settings

--- a/src/sass/footer.sass
+++ b/src/sass/footer.sass
@@ -4,7 +4,7 @@ footer
   height: $footerHeight
   background: white
   +box-shadow(-4px -1px 10px 0 #ccc)
-  z-index: 330
+  z-index: 310
 
   #console, #stats
     position: relative
@@ -69,3 +69,5 @@ footer
     margin: 5px 0
     &, & a
       color: #999
+  &.full
+    bottom: 5px
