--- a/src/sass/io.sass
+++ b/src/sass/io.sass
@@ -9,11 +9,11 @@ input[type=file]#openProject
   z-index: 9999
 
 #dropZone
-  +stretch($headerHeight, 0, $footerHeight)
+  +stretch($headerHeight, 0, 0)
   background: $greyClr
   text-align: center
   padding-top: 25%
-  z-index: 9999
+  z-index: 320
   visibility: hidden
   h1
     width: auto
