--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -43,6 +43,11 @@ a:hover
 main
   +stretch($headerHeight, $asideWidth, $footerHeight + 15)
   overflow: visible
+  &.full
+    bottom: 15px
+
+.clear
+  clear: both
 
 // components __________________________________________________________________
 @import header
