--- a/src/templates/simulator.pug
+++ b/src/templates/simulator.pug
@@ -4,14 +4,14 @@
     rect(x='0', y='0', width='100%', height='4')
     rect(x='0', y='95%', width='306', height='4')
     rect(x='306', y='54%', width='4', height='41.6%')
-    rect(x='160', y='0', width='4', height='14%')
+    rect(x='160', y='0', width='4', height='11%')
     rect(x='400', y='0', width='4', height='48%')
     // alu.e1 bus
     rect(x='0', y='34%', width='210', height='4')
     rect(x='210', y='34%', width='4', height='12%')
     // ir-alu.op bus
-    rect(x='100', y='14%', width='4', height='44%')
-    rect(x='100', y='57.5%', width='200', height='4')
+    rect(x='100', y='11%', width='4', height='43%')
+    rect(x='100', y='53.5%', width='200', height='4')
   // ir-ram addresses bus
   svg.addressBus(
     style='top:13%;left:220px',
@@ -24,7 +24,7 @@
     svg.addressBus(ng-class="'status' + sim.status")
       rect(x='0', y='40', width='4', height='140')
       rect(x='100', y='40', width='4', height='140')
-    label.tooltip
+    label.tooltip(ng-if="simLables")
       | PC
       span.tooltiptext(translate="PC")
     #val
@@ -48,7 +48,7 @@
       rect(x='120', y='0', width='170', height='4')
       rect(x='290', y='0', width='4', height='203')
       rect(x='120', y='200', width='174', height='4')
-    label.tooltip
+    label.tooltip(ng-if="simLables")
       | ACC
       span.tooltiptext(translate="ACC")
     input(
@@ -67,7 +67,7 @@
       240 180,\
       100 180\
       ')
-    label.tooltip
+    label.tooltip(ng-if="simLables")
       | ALU
       span.tooltiptext(translate="ALU")
     input#e1(
@@ -84,7 +84,7 @@
     )
   // instructions register
   #ir
-    label.tooltip
+    label.tooltip(ng-if="simLables")
       | IR
       span.tooltiptext(translate="IR")
     input#cmd(
@@ -97,8 +97,8 @@
     )
   // other components labels
   label#decoder(ng-class='{focus: fSt(5)}', translate="DECODER")
-  label#busL(translate="DATA_BUS")
-  label#addressesBusL(translate="ADDRESSES_BUS")
-  label#ramL.tooltip
+  label#busL(translate="DATA_BUS", ng-if="simLables")
+  label#addressesBusL(translate="ADDRESSES_BUS", ng-if="simLables")
+  label#ramL.tooltip(ng-if="simLables")
     p RAM
     span.tooltiptext(translate="RAM")
