--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -32,7 +32,7 @@ html(lang='en')
 
     a(id="downloadProject")
 
-    main(ng-controller='simulatorCtrl')
+    main(ng-controller='simulatorCtrl', ng-class="{ 'full': !logStats }")
       include ./simulator.pug
       include ./memory.pug
 
@@ -56,6 +56,9 @@ html(lang='en')
       .title(ng-click="panel = ''")
         .close
         h2(translate="SETTINGS")
+        h3
+          | -&nbsp;
+          span(translate="SETTINGS_COOKIES")
       article(ng-controller="settingsCtrl")
         include ./panels/settings.pug
 
