--- a/src/templates/panels/settings.pug
+++ b/src/templates/panels/settings.pug
@@ -1,10 +1,47 @@
-p
-  b(translate="SETTINGS_LANGUAGE")
-  select(
-    ng-options="k as v.name for (k, v) in $root.translations",
-    ng-model="lang"
-  )
+.fifty
+  p
+    b(translate="SETTINGS_LANGUAGE")
+    select(
+      ng-options="k as v.name for (k, v) in $root.translations",
+      ng-model="lang"
+    )
+  p
+    b(translate="SETTINGS_DEFAULT_PC_STEP")
+    input(
+      type="number",
+      ng-model="pc_step"
+    )
+  p
+    b(translate="SETTINGS_TVARS_INIT")
+    input(
+      type="number",
+      min="0",
+      ng-model="tVarCount"
+    )
+.fifty
+  p
+    input(
+      type="checkbox",
+      ng-model="logStats"
+      id="logStats"
+    )
+    label(for="logStats")
+      b(translate="SETTINGS_TOGGLE_LOG_STATS")
+  p
+    input(
+      type="checkbox",
+      ng-model="simLables"
+      id="simLables"
+    )
+    label(for="simLables")
+      b(translate="SETTINGS_TOGGLE_SIM_LABELS")
+  p
+    input(
+      type="checkbox",
+      ng-model="welcomeMsg"
+      id="welcomeMsg"
+    )
+    label(for="welcomeMsg")
+      b(translate="SETTINGS_TOGGLE_WELCOME_MSG")
 .clear
-button(ng-click="useLang(lang); $root.panel = ''", translate="SETTINGS_APPLY")
-p
-  i(translate="SETTINGS_COOKIES")
+button(ng-click="save()", translate="SETTINGS_APPLY")
