Settings panel layout tweaks

--- a/src/sass/simulator.sass
+++ b/src/sass/simulator.sass
@@ -63,8 +63,10 @@
       border: none
       +border-radius(5px 0 0 5px)
       cursor: pointer
+      +transition
       &:hover
-        background: $greyBorderClr
+        background: $themeClr
+        color: white
     input
       width: 70%
       background: none
