--- a/src/sass/panels.sass
+++ b/src/sass/panels.sass
@@ -6,7 +6,7 @@
   z-index: 9000
 
 .panel
-  +stretch(10%, 20%, 10%, 20%)
+  +stretch(10%, 22%, 10%, 22%)
   position: fixed
   background: white
   z-index: 9999
@@ -17,19 +17,17 @@
     background: $greyClr
     padding: 0 35px
     cursor: pointer
+    +transition
 
-    h2, h3
-      float: left
-      font-family: 'Lato', sans-serif
+    &:hover
+      background: $greyBorderClr
+
     h2
+      float: left
       font:
+        family: 'Lato', sans-serif
         weight: 400
         size: 22px
-    h3
-      font:
-        weight: 300
-        size: 15px
-      padding: 9px 5px
 
     .close
       float: right
@@ -55,15 +53,16 @@
 
   article
     +stretch()
-    padding: 10px 35px
+    padding: 10px 35px 40px
     margin-top: 60px
     overflow-y: auto
-    .fifty
-      float: left
-      width: 50%
     p
       line-height: 1.5
       text-align: justify
+    hr
+      border: none
+      border-top: 1px solid $greyBorderClr
+      margin: 25px 0
     h3
       font:
         family: 'Lato', sans-serif
@@ -90,15 +89,6 @@
         size: 10px auto
       padding-right: 25px
 
-    button
-      background: $greyClr
-      border: 1px solid $greyBorderClr
-      padding: 10px 20px
-      text-transform: uppercase
-      cursor: pointer
-      &:hover
-        background: $greyBorderClr
-
     input[type=checkbox]
       &:not(:checked), &:checked
         position: absolute
@@ -113,9 +103,8 @@
             +transition
           &:before
             left: 0
-            top: -3px
             width: 45px
-            height: 25px
+            height: 24px
             background: white
             border-radius: 4px
             border: 1px solid $greyBorderClr
@@ -133,8 +122,34 @@
           &:after
             background: white
             left: 22px
-      &:focus + label:before
-        box-sizing: border-box
+
+    footer
+      +stretch(auto, 22%, 10%, 22%)
+      position: fixed
+      background: $greyClr
+      padding: 15px 35px
+      h3
+        float: left
+        padding: 9px 5px
+        margin: 0
+        font:
+          family: 'Lato', sans-serif
+          weight: 300
+          size: 15px
+        font-style: italic
+      button
+        float: right
+        background: $themeClr
+        padding: 10px 20px
+        border: none
+        +border-radius(4px)
+        text-transform: uppercase
+        font-size: 14px
+        color: white
+        cursor: pointer
+        +transition
+        &:hover
+          background: $themeClrDark
 
     table
       width: 100%
@@ -144,18 +159,21 @@
         border: 1px solid #ddd
       &#samples
         margin-top: 20px
-        tr:hover td
-          background: $greyClr
-        tr td:not(:first-child)
-          width: 150px
-          cursor: pointer
-          text-align: center
-          &, & a
-            color: #666
-            text-decoration: none
-          .fa
-            margin-right: 15px
-          &:hover
-            background: $greyBorderClr
+        tr
+          td
+            +transition
+          &:hover td
+            background: $greyClr
+          td:not(:first-child)
+            width: 150px
+            cursor: pointer
+            text-align: center
             &, & a
-              color: black
+              color: #666
+              text-decoration: none
+            .fa
+              margin-right: 15px
+            &:hover
+              background: $themeClr
+              &, & a
+                color: white
