--- a/src/templates/panels/samples.pug
+++ b/src/templates/panels/samples.pug
@@ -8,3 +8,8 @@ table#samples
     td(ng-click="open(sample)")
       i.fa.fa-folder-open
       b(translate='SAMPLES_OPEN')
+footer
+  a(href="samples.zip", download)
+    button
+      i.fa.fa-download
+      span(translate="SAMPLES_DOWNLOAD_ALL")
