--- a/src/templates/panels/settings.pug
+++ b/src/templates/panels/settings.pug
@@ -46,4 +46,6 @@ p
 hr
 footer
   h3(translate="SETTINGS_COOKIES")
-  button(ng-click="save()", translate="SETTINGS_APPLY")
+  button(ng-click="save()")
+    i.fa.fa-check
+    span(translate="SETTINGS_APPLY")
