--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -11,7 +11,7 @@ html(lang='en')
     link(rel='stylesheet', href='style.min.css')
 
   base(target='_blank')
-  body(ng-app='vnmsim', ng-cloak)
+  body(ng-app='vnmsim', ng-cloak, ng-controller='mainCtrl')
 
     #dropZone
       h1(translate='FILE_DROP')
