Change build directory structure to fix Font Awesome issue

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
     meta(name='keywords', content='vn simulator von neumann machine simulator pc\
     computer alu acc accumulator program counter ram bus start play')
     meta(name='viewport', content='width=device-width')
-    link(rel='stylesheet', href='style.min.css')
+    link(rel='stylesheet', href='src/style.min.css')
 
   base(target='_blank')
   body(ng-app='vnmsim', ng-cloak, ng-controller='mainCtrl')
@@ -61,4 +61,4 @@ html(lang='en')
 
     include ./footer.pug
 
-    script(src='app.js')
+    script(src='src/app.js')
